--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="./partials/header.html" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/books.html" />
+      <load src="./partials/feedbacks.html" />
+      <load src="./partials/events.html" />
+      <load src="./partials/article.html" />
+      <load src="./partials/location.html" />
     </main>
 
     <load src="./partials/footer.html" />
