--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
 
     <load src="./partials/footer.html" />
 
+    <load src="./partials/book-moda.html" />
+    <load src="./partials/contact-modal.html" />
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
